; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_item_valid.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_item_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_data_item*, i32)* @item_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @item_valid(%struct.obs_data_item* %0, i32 %1) #0 {
  %3 = alloca %struct.obs_data_item*, align 8
  %4 = alloca i32, align 4
  store %struct.obs_data_item* %0, %struct.obs_data_item** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %6 = icmp ne %struct.obs_data_item* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %9 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %10, %11
  br label %13

13:                                               ; preds = %7, %2
  %14 = phi i1 [ false, %2 ], [ %12, %7 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
